[gd_scene load_steps=8 format=3 uid="uid://c640p4ns2sn7u"]

[ext_resource type="Script" path="res://Scripts/Story.gd" id="1_bvkmk"]
[ext_resource type="Texture2D" uid="uid://cc6ier0ba5de5" path="res://Assets/Images/start-story-background.jpg" id="2_famk1"]
[ext_resource type="Texture2D" uid="uid://2btnehksejb6" path="res://Assets/Images/end-story-background.jpg" id="3_ur6op"]

[sub_resource type="Animation" id="Animation_kmxxw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Text/Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Text/Label:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_5nfll"]
resource_name = "black_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Text/Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Text/Label:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_moeix"]
resource_name = "black_out"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Text/Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Text/Label:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ahio3"]
_data = {
"RESET": SubResource("Animation_kmxxw"),
"black_in": SubResource("Animation_5nfll"),
"black_out": SubResource("Animation_moeix")
}

[node name="StartStory" type="Panel"]
script = ExtResource("1_bvkmk")

[node name="Background" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="StartImage" type="TextureRect" parent="Background"]
modulate = Color(1, 1, 1, 0.501961)
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("2_famk1")

[node name="EndImage" type="TextureRect" parent="Background"]
visible = false
modulate = Color(1, 1, 1, 0.470588)
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("3_ur6op")

[node name="Text" type="Control" parent="."]
anchors_preset = 0
offset_left = 300.0
offset_top = 300.0
offset_right = 340.0
offset_bottom = 340.0

[node name="Label" type="RichTextLabel" parent="Text"]
self_modulate = Color(1, 1, 1, 0)
top_level = true
layout_mode = 0
offset_left = 300.0
offset_top = 300.0
offset_right = 1620.0
offset_bottom = 600.0
theme_override_font_sizes/normal_font_size = 64
bbcode_enabled = true
scroll_active = false

[node name="Buttons" type="Control" parent="."]
anchors_preset = 0
offset_left = 660.0
offset_top = 900.0
offset_right = 1260.0
offset_bottom = 1000.0

[node name="Skip" type="Button" parent="Buttons"]
layout_mode = 0
offset_right = 250.0
offset_bottom = 100.0
theme_override_font_sizes/font_size = 32
text = "Skip"

[node name="Next" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 300.0
offset_right = 550.0
offset_bottom = 100.0
theme_override_font_sizes/font_size = 32
text = "Next"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ahio3")
}

[connection signal="pressed" from="Buttons/Skip" to="." method="_on_SkipButton_pressed"]
[connection signal="pressed" from="Buttons/Next" to="." method="_on_NextButton_pressed"]
